test/expected/rerr_readonly_array_element.out
[CompoundList]
  [CompoundListCondition, None]
    [Assign arr[0]=1]
  [CompoundListCondition, None]
    [SimpleCommand "readonly" "arr"]
  [CompoundListCondition, None]
    [Assign arr[1]=2]
[Word
  Unquoted "arr[0]=1"
]
[Word
  Unquoted "readonly"
]
[Word
  Unquoted "arr"
]
[Word
  Unquoted "arr[1]=2"
]
shit: 4:1: error: Unable to assign 'arr' because it is read only.
     4 |  arr[1]=2
       |  ^~~~~~~~ here.
